--- a/semana4/dia2/reto3 - resolucion en clase/css/styles.css
+++ b/semana4/dia2/reto3 - resolucion en clase/css/styles.css
@@ -168,6 +168,7 @@ body {
 .comment {
   flex: 1;
   padding: 1rem;
+  border: 1px solid darkblue;
 }
 
 .comment__box {
@@ -181,6 +182,20 @@ body {
   width: 4.5rem;
   height: 4.5rem;
   transform: translate(0, -50%);
+}
+
+.comments__button {
+  text-align: center;
+  background-color: var(--DarkGrayishBlue);
+}
+
+.footer__title {
+  background-color: var(--BrightRed);
+}
+
+.wrapper {
+  max-width: var(--ancho-maximo);
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1440px) {
