--- a/semana4/dia3/reto4 - responsive landing page/css/styles.css
+++ b/semana4/dia3/reto4 - responsive landing page/css/styles.css
@@ -103,7 +103,7 @@
   align-items: center;
   border-radius: 0.5rem;
   max-width: 100%;
-  height: 9rem;
+  height: 10rem;
   padding: 0 3.5rem 0 3.5rem;
   gap: 1.1rem;
   transform: translate(0, 50%);
@@ -138,7 +138,9 @@
 .content__text {
   margin: 0 auto;
   width: 45%;
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
+  /* background-color: var(--celeste); */
+  max-width: 750px;
 }
 .content__text h2 {
   font-size: 4rem;
@@ -202,4 +204,65 @@
   align-items: flex-end;
   height: 100%;
   /* border: 1px solid black; */
+}
+
+.content__end {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  height: 420px;
+  background-color: var(--morado);
+  background-image: url(./../images/bg-boost-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content__end h3 {
+  color: white;
+  font-size: 4rem;
+}
+
+.content__end .btn1 {
+  padding: 1.4rem 5rem;
+  border-radius: 40px;
+  font-size: 1.4rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  background-color: var(--morado-oscuro);
+  padding: 4rem 2rem 1rem 0rem;
+}
+
+.footer__wrapper {
+  display: flex;
+  /* border: 1px solid greenyellow; */
+
+  width: var(--ancho-maximo);
+  justify-content: space-between;
+}
+
+.footer__nav {
+  display: flex;
+  gap: 6rem;
+}
+
+.footer__group_list p {
+  font-weight: 700;
+  color: white;
+  padding-bottom: 1rem;
+}
+.footer__link {
+  list-style: none;
+  text-decoration: none;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--plomo);
+  font-weight: 500;
+  line-height: 2rem;
 }
